fixed the homepage.js for the icons to actually have a shadow and aligned

--- a/partyy-app/src/components/homepage/homepage.css
+++ b/partyy-app/src/components/homepage/homepage.css
@@ -20,6 +20,7 @@
     margin: 20%;
     margin-top: 10%;
     /* border: black solid 1px; */
+    /* margin-left: 3px; */
 }
 
 .homepage--firstChild{
@@ -45,6 +46,7 @@ img{
 .eyeCard .vipCard{
     margin: 55%;
     margin-bottom: 50px;
+    
 }
 
 .eyeImg{
@@ -52,7 +54,7 @@ img{
 }
 
 .searchLabel{
-    margin-right: 30%;
+    margin-right: 35%;
 }
 
 .eyeCard{
@@ -70,13 +72,22 @@ label{
 }
 
 .djImg {
-    margin-left: 14%;
+    margin-left: 30%;
+}
+.hostLabel{
+    margin-left: 25%;
+}
+
+.attendLabel{
+    margin-left: 20%;
 }
 
 .vipImg{
-    margin-left: 15%;
+    margin-left: 29%;
     margin-right: -3%;
 }
+
+
 .eyeImg, .vipImg, .djImg, .throwImg{
     filter: drop-shadow(2px 2px 5px black);
 }
